jenkins/jenkins.deployment.yaml
apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kompose.service.type: NodePort
    creationTimestamp: null
    labels:
      io.kompose.service: jenkins
    name: jenkins
  spec:
    ports:
    - name: "80"
      port: 80
      targetPort: 8080
    - name: "443"
      port: 443
      targetPort: 8443
    - name: "50000"
      port: 50000
      targetPort: 50000
    selector:
      io.kompose.service: jenkins
    type: NodePort
  status:
    loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        imagePullPolicy: IfNotPresent
        ports:
        - containerport: 80
          protocol: TCP
        ports:
        - containerPort: 8080
        - containerPort: 8443
        - containerPort: 50000
        resources: {}
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - name: jenkins
        persistentVolumeClaim:
          claimName: jenkins-claim
