jenkins/jenkins.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkinsaks
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 9080
      targetPort: 9080
      protocol: TCP
    - name: slave
      port: 50000
      protocol: TCP
    - name: http
      port: 80
      targetPort: 9080
  selector:
    app: jenkinsaks
